# monad-challenges

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  home.md  index.html  monad-challenges.cabal  params.json  testing.md
docs/: index.html
docs/pages/: ex1-1.html  ex1-3hint.html  ex1-4.html  ex1-6.html  ex2-1.html  ex2-3.html  ex2-4.html  ex2-5.html  ex2-6.html  ex3-1.html  ex3-2.html  ex3-5.html  ex4-3.html  ex4-4.html  ex4-5.html  ex4-6.html  ex5-3.html  set1.html  set3.html  set4.html
hakyll/: index.md  regen.sh  site.hs
hakyll/pages/: ex1-1.md  ex1-2.md  ex1-3.md  ex1-3hint.md  ex1-4.md  ex1-5.md  ex1-6.md  ex2-1.md  ex2-2.md  ex2-3.md  ex2-4.md  ex2-5.md  ex2-6.md  ex3-1.md  ex3-2.md  ex3-3.md  ex3-4.md  ex3-5.md  ex4-1.md  ex4-2.md  ex4-3.md  ex4-4.md  ex4-5.md  ex4-6.md  ex5-1.md  ex5-2.md  ex5-3.md  ex5-4.md  ex5-5.md  set1.md  set2.md  set3.md  set4.md  set5.md
hakyll/templates/: default.html
markdown/: ex1-5.md  ex1-6.md  ex2-1.md  ex2-2.md  ex3-1.md  ex3-4.md  ex4-1.md  ex4-2.md  ex4-6.md  ex5-1.md  set2.md  set4.md  set5.md
monad-challenges-code/: default.nix  monad-challenges-code.cabal
monad-challenges-code/hakyll/: index.md  regen.sh
monad-challenges-code/hakyll/pages/: ex1-1.md  ex1-2.md  ex1-3.md  ex1-3hint.md  ex1-6.md  ex2-1.md  ex2-4.md  ex2-5.md  ex3-1.md  ex3-2.md  ex3-3.md  ex3-4.md  ex3-5.md  ex4-1.md  ex4-3.md  ex4-4.md  ex4-5.md  ex5-3.md  set1.md  set3.md  set5.md
monad-challenges-code/src/: MCPrelude.hs
pages/: Set1.md  ex1-1.html  ex1-2.html  ex1-3.html  ex1-3hint.html  ex1-4.html  ex1-5.html  ex1-6.html  ex2-1.html  ex2-2.html  ex2-3.html  ex2-4.html  ex2-5.html  ex2-6.html  ex3-1.html  ex3-2.html  ex3-3.html  ex3-4.html  ex3-5.html  ex4-1.html  ex4-2.html  ex4-3.html  ex4-4.html  ex4-5.html  ex4-6.html  ex5-1.html  ex5-2.html  ex5-3.html  ex5-4.html  ex5-5.html  home.md  set1-1.md  set1-2.md  set1-3.md  set1-3hint.md  set1-4.md  set1-5.md  set1-6.md  set1.html  set1.md  (+22 more)
pages/sets/1/: index.md
pages/sets/1/challenges/: 1.md  2.md  3.md  4.md  5.md  6.md
pages/sets/2/: index.md
pages/sets/2/challenges/: 10.md  12.md  (+3 more)
src/: MCPrelude.hs  MCRand.hs
stylesheets/: styles.css
(+2 files in other folders)
