name:                monad-challenges
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     MCPrelude
  other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable site
  hs-source-dirs: hakyll
  main-is: site.hs
  build-depends:
      base
    , filepath
    , hakyll
    , mtl
    , transformers
