name:                monad-challenges
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
build-type:          Simple
cabal-version:       >=1.10

Tested-With:
  GHC == 7.6.3,
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.3

library
  exposed-modules:     MCPrelude
  other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
  build-depends:       base >= 4 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

executable site
  hs-source-dirs: hakyll
  main-is: site.hs
  build-depends:
      base
    , filepath
    , hakyll
    , mtl
    , transformers
